--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+miette = {version="5.10.0", features=["fancy"]}
+nom = "7.1.3"
+nom_locate = "4.2.0"
