--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+divan = "0.1.4"
 miette = {version="5.10.0", features=["fancy"]}
 nom = "7.1.3"
 nom_locate = "4.2.0"
+
+[[bench]]
+name="client-clusters"
+harness=false
