--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ divan = "0.1.4"
 miette = {version="5.10.0", features=["fancy"]}
 nom = "7.1.3"
 nom_locate = "4.2.0"
+thiserror = "1.0.50"
 
 [[bench]]
 name="client-clusters"
