--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
 divan = "0.1.4"
 miette = {version="5.10.0", features=["fancy"]}
 nom = "7.1.3"
@@ -15,3 +16,7 @@ thiserror = "1.0.50"
 [[bench]]
 name="client-clusters"
 harness=false
+
+[[bench]]
+name = "client-clusters-criterion"
+harness = false
