--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ harness=false
 [[bench]]
 name = "client-clusters-criterion"
 harness = false
+
+[profile.flamegraph]
+inherits = "release"
+debug = true
