--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
-criterion = { version = "0.5.1", features = ["html_reports"] }
-divan = "0.1.4"
 miette = {version="5.10.0", features=["fancy"]}
 nom = "7.1.3"
 nom_locate = "4.2.0"
 thiserror = "1.0.50"
+
+[dev.dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+divan = "0.1.4"
 
 [[bench]]
 name="client-clusters"
