--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ nom = "7.1.3"
 nom_locate = "4.2.0"
 thiserror = "1.0.50"
 
-[dev.dependencies]
+[dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 divan = "0.1.4"
 
