--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,14 @@ edition = "2021"
 clap = { version = "4.4.11", features = ["derive"] }
 miette = {version="5.10.0", features=["fancy"]}
 nom = "7.1.3"
+nom-supreme = "0.8.0"
 nom_locate = "4.2.0"
 thiserror = "1.0.50"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 divan = "0.1.4"
+rstest = "0.18.2"
 
 [[bench]]
 name="client-clusters"
