--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 clap = { version = "4.4.11", features = ["derive"] }
 miette = {version="5.10.0", features=["fancy"]}
 nom = "7.1.3"
+nom-greedyerror = "0.5.0"
 nom-supreme = "0.8.0"
 nom_locate = "4.2.0"
 thiserror = "1.0.50"
