--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ nom-greedyerror = "0.5.0"
 nom-supreme = "0.8.0"
 nom_locate = "4.2.0"
 thiserror = "1.0.50"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["regex", "json"] }
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
